src/test/ui/regions/regions-bounded-method-type-parameters-trait-bound.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-bounded-method-type-parameters-trait-bound.rs:20:7
   |
LL | fn caller2<'a,'b,F:Foo<'a>>(a: Inv<'a>, b: Inv<'b>, f: F) {
   |                                -------     ------- these two types are declared with different lifetimes...
LL |     // Here the value provided for 'y is 'b, and hence 'b:'a does not hold.
LL |     f.method(b);
   |       ^^^^^^ ...but data from `b` flows into `a` here

error: aborting due to previous error

